omegamaxent_interface/3.1.x/_sources/ChangeLog.md.txt
(changelog)=

# Changelog

## Version 3.1.0

omegamaxent_interface version 3.1.0 is a compatibility
release for TRIQS version 3.1.0.


## Version 3.0.0

omegamaxent_interface version 3.0.0 is a compatibility
release for TRIQS version 3.0.0 that
introduces compatibility with Python 3 (Python 2 no longer supported).

We provide a more detailed description of the changes below.

General
-------
* Fix various dead links
* Synchronize project structure with app4triqs application skeleton
* unused cmake folder removed

py3
---
* Port all python scripts and notebooks to Python3
* Run port_to_triqs3 porting script

doc
---
* Add github logo image

Contributors: Dominic Bergeron, Philipp Dumitrescu, Olivier Parcollet, Dylan Simon, Hugo U. R. Strand, Nils Wentzell

## Version 2.2.0

omegamaxent_interface version 2.2.0 is solely
a compatibility release against TRIQS version 2.2.0.

We provide a detailed description of the changes below.

jenkins
-------
* Synchronize Jenkinsfile with app4triqs

General
-------
* Synchronize the Jenkinsfile with app4triqs
* Bump Version number and triqs requirement to 2.2(dev)
